Basic tests for the search endpoint. Documentation on how the search work, improved the api documentation, fixed bug when units_qs becomes none and ordering results in error. added use_trigram param.
